# vkd3d-proton

./: .gitignore  fetch_nv_aftermath.sh  meson.build  meson_options.txt
libs/vkd3d/: device.c  meson.build  vkd3d_private.h
subprojects/nv_aftermath/: fetch_nv_aftermath.sh  meson.build
subprojects/nv_aftermath/include/: nv_aftermath.h
subprojects/nv_aftermath/src/: nv_aftermath.c
